Create operate function and global vars as needed Created the operate function which calls one of the other operations given two numbers and the operator in question. Initialized some values like the input list and the stored current and previous value.

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 80vh;
+    height: 75%;
     aspect-ratio: 1 / 2;
     background-color: silver;
     border: 3px black solid;
